# Langchain-RAG-LLM-AI-Project

./: .env.example  .gitignore  RAG_USAGE_GUIDE.md  README.md  eslint.config.js  main.py  nodemon.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  tutorial.md
data/: employees.csv  notes.txt  sample.txt
notebooks/: 1-chromadb.ipynb  Untitled.ipynb  csv_excel_loaders.ipynb  document_loaders_tutorial.ipynb  rag_chromadb.ipynb  sql_databases.ipynb
src/: index.ts
src/RagDocs/: sample1.txt  sample2.txt  sample3.txt
src/config/: env.ts
src/services/: documentLoader.ts  embeddingService.ts
src/utils/: logger.ts
