[project]
name = "langchain-rag-llm-ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb",
    "faiss-cpu",
    "ipykernel",
    "langchain",
    "langchain-community",
    "langchain-groq",
    "langchain-openai",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas",
    "pypdf",
    "python-dotenv",
    "reportlab>=4.4.10",
    "sentence-transformers",
    "tiktoken",
    "unstructured>=0.21.5",
]
